fase1/parser.js
window.PEG = // @generated by Peggy 4.0.2.
//
// https://peggyjs.org/
(function() {
  "use strict";

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { start: peg$parsestart };
  var peg$startRuleFunction = peg$parsestart;

  var peg$c0 = "//";
  var peg$c1 = ";";
  var peg$c2 = "/*";
  var peg$c3 = "*/";
  var peg$c4 = ",";
  var peg$c5 = ".";
  var peg$c6 = ":";
  var peg$c7 = "ascii";
  var peg$c8 = "asciz";
  var peg$c9 = "byte";
  var peg$c10 = "word";
  var peg$c11 = "dword";
  var peg$c12 = "align";
  var peg$c13 = "space";
  var peg$c14 = "global";
  var peg$c15 = "section";
  var peg$c16 = "text";
  var peg$c17 = "data";
  var peg$c18 = "bss";
  var peg$c19 = "equ";
  var peg$c20 = "end";
  var peg$c21 = "rodata";
  var peg$c22 = "[";
  var peg$c23 = "]";
  var peg$c24 = "#";
  var peg$c25 = "=";
  var peg$c26 = "x";
  var peg$c27 = "w";
  var peg$c28 = "v";
  var peg$c29 = "sp";
  var peg$c30 = "lr";
  var peg$c31 = "pc";
  var peg$c32 = "0x";
  var peg$c33 = "h";
  var peg$c34 = "0b";
  var peg$c35 = "'";
  var peg$c36 = "\"";
  var peg$c37 = "\r\n";

  var peg$r0 = /^[^\n]/;
  var peg$r1 = /^[a-zA-Z]/;
  var peg$r2 = /^[0-9]/;
  var peg$r3 = /^[a-zA-Z_]/;
  var peg$r4 = /^[a-zA-Z0-9_]/;
  var peg$r5 = /^[a-fA-F0-9]/;
  var peg$r6 = /^[0-9a-fA-F]/;
  var peg$r7 = /^[01]/;
  var peg$r8 = /^[^']/;
  var peg$r9 = /^[^"]/;
  var peg$r10 = /^[\n\r]/;
  var peg$r11 = /^[ \t\n\r]/;

  var peg$e0 = peg$anyExpectation();
  var peg$e1 = peg$literalExpectation("//", false);
  var peg$e2 = peg$classExpectation(["\n"], true, false);
  var peg$e3 = peg$literalExpectation(";", false);
  var peg$e4 = peg$literalExpectation("/*", false);
  var peg$e5 = peg$literalExpectation("*/", false);
  var peg$e6 = peg$literalExpectation(",", false);
  var peg$e7 = peg$literalExpectation(".", false);
  var peg$e8 = peg$literalExpectation(":", false);
  var peg$e9 = peg$literalExpectation("ascii", false);
  var peg$e10 = peg$literalExpectation("asciz", false);
  var peg$e11 = peg$literalExpectation("byte", false);
  var peg$e12 = peg$literalExpectation("word", false);
  var peg$e13 = peg$literalExpectation("dword", false);
  var peg$e14 = peg$literalExpectation("align", false);
  var peg$e15 = peg$literalExpectation("space", false);
  var peg$e16 = peg$literalExpectation("global", false);
  var peg$e17 = peg$literalExpectation("section", false);
  var peg$e18 = peg$literalExpectation("text", false);
  var peg$e19 = peg$literalExpectation("data", false);
  var peg$e20 = peg$literalExpectation("bss", false);
  var peg$e21 = peg$literalExpectation("equ", false);
  var peg$e22 = peg$literalExpectation("end", false);
  var peg$e23 = peg$literalExpectation("rodata", false);
  var peg$e24 = peg$literalExpectation("[", false);
  var peg$e25 = peg$literalExpectation("]", false);
  var peg$e26 = peg$literalExpectation("#", false);
  var peg$e27 = peg$literalExpectation("=", false);
  var peg$e28 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false);
  var peg$e29 = peg$otherExpectation("register");
  var peg$e30 = peg$literalExpectation("x", false);
  var peg$e31 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e32 = peg$literalExpectation("w", false);
  var peg$e33 = peg$literalExpectation("v", false);
  var peg$e34 = peg$literalExpectation("sp", false);
  var peg$e35 = peg$literalExpectation("lr", false);
  var peg$e36 = peg$literalExpectation("pc", false);
  var peg$e37 = peg$otherExpectation("identifier");
  var peg$e38 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false);
  var peg$e39 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false);
  var peg$e40 = peg$otherExpectation("number");
  var peg$e41 = peg$literalExpectation("0x", false);
  var peg$e42 = peg$classExpectation([["a", "f"], ["A", "F"], ["0", "9"]], false, false);
  var peg$e43 = peg$classExpectation([["0", "9"], ["a", "f"], ["A", "F"]], false, false);
  var peg$e44 = peg$literalExpectation("h", false);
  var peg$e45 = peg$literalExpectation("0b", false);
  var peg$e46 = peg$classExpectation(["0", "1"], false, false);
  var peg$e47 = peg$otherExpectation("char");
  var peg$e48 = peg$literalExpectation("'", false);
  var peg$e49 = peg$classExpectation(["'"], true, false);
  var peg$e50 = peg$otherExpectation("string");
  var peg$e51 = peg$literalExpectation("\"", false);
  var peg$e52 = peg$classExpectation(["\""], true, false);
  var peg$e53 = peg$otherExpectation("double");
  var peg$e54 = peg$literalExpectation("\r\n", false);
  var peg$e55 = peg$classExpectation(["\n", "\r"], false, false);
  var peg$e56 = peg$otherExpectation("whitespace");
  var peg$e57 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);

  var peg$f0 = function(instructions) { return { instructions, errors }; };
  var peg$f1 = function(head, tail) { return [head].concat(tail.map(t => t[1])); };
  var peg$f2 = function(invalidToken) {
        errors.push(buildSyntaxError("Invalid Sintax", location(), invalidToken.join(''), "Sintáctico"));
        return null; // Continuar con el análisis
    };
  var peg$f3 = function(invalidToken) {
        errors.push(buildSyntaxError("Unrecognized input", location(), invalidToken.join(''), "Sintáctico"));
        return null; // Continuar con el análisis
    };
  var peg$f4 = function() { return { type: "comment", comment: text() }; };
  var peg$f5 = function() { return { type: "comment", comment: text() }; };
  var peg$f6 = function(text) { return { type: "comment", comment: text }; };
  var peg$f7 = function() { return text(); };
  var peg$f8 = function(nemonic, destiny, source1, source2) { return {operation: { nemonic: nemonic , destiny: destiny, source1_val: source1, source2_val: source2 }}; };
  var peg$f9 = function(nemonic, destiny, source) { return {operation: { nemonic: nemonic , destiny: destiny, value: source }}; };
  var peg$f10 = function(nemonic, source) { return {operation: { nemonic: nemonic , value: source }}; };
  var peg$f11 = function(directive_name, value) { return { type: "directive", name: directive_name, value: value || null }};
  var peg$f12 = function(name) { return { type: "label_ref", name: name }; };
  var peg$f13 = function(name) {return {type: "label_def", name: name}};
  var peg$f14 = function(register) { return register; };
  var peg$f15 = function(identifier) { return register; };
  var peg$f16 = function(direction) { return "[" + direction + "]"; };
  var peg$f17 = function(value) { return value; };
  var peg$f18 = function(value) { return value; };
  var peg$f19 = function(char) { return char; };
  var peg$f20 = function(identifier) { return identifier; };
  var peg$f21 = function(register) { return register; };
  var peg$f22 = function(identifier) { return identifier; };
  var peg$f23 = function(register) { return "[" + register + "]"; };
  var peg$f24 = function(direction) { return direction; };
  var peg$f25 = function() {
        const textValue = text().toUpperCase();
        const validNemonics = [
            "ADD", "SUB", "MOV", "LDR", "STR", "B", "BL", "RET", "BLT" , "BGT" , "CMP", "NOP", "SVC", "MSR", "MRS",
            "ADC", "SBC", "RSB", "AND", "ORR", "EOR", "BIC", "ASR", "LSR", "LSL", "ROR", "RRX", 
            "MVN", "LDRB", "STRB", "LDRH", "STRH", "LDRSH", "LDRSB", "BX", "BLX", "MUL", "MLA", 
            "MLS", "UMULL", "UMLAL", "SMULL", "SMLAL", "QADD", "QSUB", "QDADD", "QDSUB", "VADD", 
            "VSUB", "VMUL", "VDIV", "VMLA", "VMLS", "VMOV", "VCVT", "MCR", "MRC", "CDP", "LDC", 
            "STC", "SWP", "SWPB", "LDREX", "STREX", "CLREX", "REV", "REV16", "REVSH", "BKPT", 
            "CLZ", "USAD8", "USADA8", "BNE", "BEQ", "BPL", "BMI", "BVC", "BVS", "BCC", "BCS",
        ];

        if (validNemonics.includes(textValue)) {
            return {nemonic:textValue.toLowerCase()};
        }
    };
  var peg$f26 = function(reg) {
        const value = parseInt(reg.join(''), 10);
        if (value >= 0 && value <= 31) {
            return "x" + value;
        } else {
            errors.push(buildSyntaxError("Índice de registro fuera de rango", location(), text()));
            return null; // Continuar con el análisis
        }
    };
  var peg$f27 = function(reg) {
        const value = parseInt(reg.join(''), 10);
        if (value >= 0 && value <= 31) {
            return "w" + value;
        } else {
            errors.push(buildSyntaxError("Índice de registro fuera de rango", location(), text()));
            return null; // Continuar con el análisis
        }
    };
  var peg$f28 = function(reg) {
        const value = parseInt(reg.join(''), 10);
        if (value >= 0 && value <= 31) {
            return "v" + value;
        } else {
            errors.push(buildSyntaxError("Índice de registro fuera de rango", location(), text()));
            return null; // Continuar con el análisis
        }
    };
  var peg$f29 = function() { return "sp" };
  var peg$f30 = function() { return "lr" };
  var peg$f31 = function() { return "pc" };
  var peg$f32 = function(identifier) { return identifier; };
  var peg$f33 = function() { return {identifier: text()}; };
  var peg$f34 = function(hex) { return parseInt(hex.join(""), 16) };
  var peg$f35 = function(hex) { return parseInt(hex.join(""), 16) };
  var peg$f36 = function(dec) { return parseInt(dec.join(""), 10) };
  var peg$f37 = function(bin) { return parseInt(bin.join(""), 2) };
  var peg$f38 = function() { return text().trim(); };
  var peg$f39 = function(chars) { return {string :chars.join('')} };
  var peg$f40 = function() { return parseFloat(text()); };
  var peg$currPos = options.peg$currPos | 0;
  var peg$savedPos = peg$currPos;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = peg$currPos;
  var peg$maxFailExpected = options.peg$maxFailExpected || [];
  var peg$silentFails = options.peg$silentFails | 0;

  var peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parseinstructions();
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      s4 = [];
      s5 = peg$parsenewline();
      while (s5 !== peg$FAILED) {
        s4.push(s5);
        s5 = peg$parsenewline();
      }
      peg$savedPos = s0;
      s0 = peg$f0(s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseinstructions() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseinstruction();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parse_();
      s5 = peg$parseinstruction();
      if (s5 !== peg$FAILED) {
        s4 = [s4, s5];
        s3 = s4;
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parse_();
        s5 = peg$parseinstruction();
        if (s5 !== peg$FAILED) {
          s4 = [s4, s5];
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      peg$savedPos = s0;
      s0 = peg$f1(s1, s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseinstruction() {
    var s0;

    s0 = peg$parsecomment();
    if (s0 === peg$FAILED) {
      s0 = peg$parsedirective();
      if (s0 === peg$FAILED) {
        s0 = peg$parselabel_ref();
        if (s0 === peg$FAILED) {
          s0 = peg$parseoperation();
          if (s0 === peg$FAILED) {
            s0 = peg$parseidentifier();
            if (s0 === peg$FAILED) {
              s0 = peg$parseinvalid();
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseinvalid() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$currPos;
    s3 = peg$currPos;
    peg$silentFails++;
    s4 = peg$parsedirective_name();
    peg$silentFails--;
    if (s4 === peg$FAILED) {
      s3 = undefined;
    } else {
      peg$currPos = s3;
      s3 = peg$FAILED;
    }
    if (s3 !== peg$FAILED) {
      s4 = peg$currPos;
      peg$silentFails++;
      s5 = peg$parsenemonic();
      peg$silentFails--;
      if (s5 === peg$FAILED) {
        s4 = undefined;
      } else {
        peg$currPos = s4;
        s4 = peg$FAILED;
      }
      if (s4 !== peg$FAILED) {
        s5 = peg$currPos;
        peg$silentFails++;
        s6 = peg$parsenumber();
        peg$silentFails--;
        if (s6 === peg$FAILED) {
          s5 = undefined;
        } else {
          peg$currPos = s5;
          s5 = peg$FAILED;
        }
        if (s5 !== peg$FAILED) {
          s6 = peg$currPos;
          peg$silentFails++;
          s7 = peg$parsestring();
          peg$silentFails--;
          if (s7 === peg$FAILED) {
            s6 = undefined;
          } else {
            peg$currPos = s6;
            s6 = peg$FAILED;
          }
          if (s6 !== peg$FAILED) {
            s7 = peg$currPos;
            peg$silentFails++;
            s8 = peg$parsedouble();
            peg$silentFails--;
            if (s8 === peg$FAILED) {
              s7 = undefined;
            } else {
              peg$currPos = s7;
              s7 = peg$FAILED;
            }
            if (s7 !== peg$FAILED) {
              s8 = peg$currPos;
              peg$silentFails++;
              s9 = peg$parsenewline();
              peg$silentFails--;
              if (s9 === peg$FAILED) {
                s8 = undefined;
              } else {
                peg$currPos = s8;
                s8 = peg$FAILED;
              }
              if (s8 !== peg$FAILED) {
                s9 = peg$currPos;
                peg$silentFails++;
                s10 = peg$parse_();
                peg$silentFails--;
                peg$currPos = s9;
                s9 = peg$FAILED;
                peg$currPos = s2;
                s2 = peg$FAILED;
              } else {
                peg$currPos = s2;
                s2 = peg$FAILED;
              }
            } else {
              peg$currPos = s2;
              s2 = peg$FAILED;
            }
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
    } else {
      peg$currPos = s2;
      s2 = peg$FAILED;
    }
    s1 = peg$FAILED;
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = [];
      s2 = peg$currPos;
      s3 = peg$currPos;
      peg$silentFails++;
      s4 = peg$parsecomment();
      peg$silentFails--;
      if (s4 === peg$FAILED) {
        s3 = undefined;
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$currPos;
        peg$silentFails++;
        s5 = peg$parseblock_comment();
        peg$silentFails--;
        if (s5 === peg$FAILED) {
          s4 = undefined;
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
        if (s4 !== peg$FAILED) {
          s5 = peg$currPos;
          peg$silentFails++;
          s6 = peg$parseoperation();
          peg$silentFails--;
          if (s6 === peg$FAILED) {
            s5 = undefined;
          } else {
            peg$currPos = s5;
            s5 = peg$FAILED;
          }
          if (s5 !== peg$FAILED) {
            s6 = peg$currPos;
            peg$silentFails++;
            s7 = peg$parsedirective();
            peg$silentFails--;
            if (s7 === peg$FAILED) {
              s6 = undefined;
            } else {
              peg$currPos = s6;
              s6 = peg$FAILED;
            }
            if (s6 !== peg$FAILED) {
              s7 = peg$currPos;
              peg$silentFails++;
              s8 = peg$parselabel_ref();
              peg$silentFails--;
              if (s8 === peg$FAILED) {
                s7 = undefined;
              } else {
                peg$currPos = s7;
                s7 = peg$FAILED;
              }
              if (s7 !== peg$FAILED) {
                s8 = peg$currPos;
                peg$silentFails++;
                s9 = peg$parselabel_def();
                peg$silentFails--;
                if (s9 === peg$FAILED) {
                  s8 = undefined;
                } else {
                  peg$currPos = s8;
                  s8 = peg$FAILED;
                }
                if (s8 !== peg$FAILED) {
                  s9 = peg$currPos;
                  peg$silentFails++;
                  s10 = peg$parsedestiny();
                  peg$silentFails--;
                  if (s10 === peg$FAILED) {
                    s9 = undefined;
                  } else {
                    peg$currPos = s9;
                    s9 = peg$FAILED;
                  }
                  if (s9 !== peg$FAILED) {
                    s10 = peg$currPos;
                    peg$silentFails++;
                    s11 = peg$parsesource();
                    peg$silentFails--;
                    if (s11 === peg$FAILED) {
                      s10 = undefined;
                    } else {
                      peg$currPos = s10;
                      s10 = peg$FAILED;
                    }
                    if (s10 !== peg$FAILED) {
                      if (input.length > peg$currPos) {
                        s11 = input.charAt(peg$currPos);
                        peg$currPos++;
                      } else {
                        s11 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$e0); }
                      }
                      if (s11 !== peg$FAILED) {
                        s3 = [s3, s4, s5, s6, s7, s8, s9, s10, s11];
                        s2 = s3;
                      } else {
                        peg$currPos = s2;
                        s2 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s2;
                      s2 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s2;
                    s2 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s2;
                  s2 = peg$FAILED;
                }
              } else {
                peg$currPos = s2;
                s2 = peg$FAILED;
              }
            } else {
              peg$currPos = s2;
              s2 = peg$FAILED;
            }
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          s2 = peg$currPos;
          s3 = peg$currPos;
          peg$silentFails++;
          s4 = peg$parsecomment();
          peg$silentFails--;
          if (s4 === peg$FAILED) {
            s3 = undefined;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$currPos;
            peg$silentFails++;
            s5 = peg$parseblock_comment();
            peg$silentFails--;
            if (s5 === peg$FAILED) {
              s4 = undefined;
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$currPos;
              peg$silentFails++;
              s6 = peg$parseoperation();
              peg$silentFails--;
              if (s6 === peg$FAILED) {
                s5 = undefined;
              } else {
                peg$currPos = s5;
                s5 = peg$FAILED;
              }
              if (s5 !== peg$FAILED) {
                s6 = peg$currPos;
                peg$silentFails++;
                s7 = peg$parsedirective();
                peg$silentFails--;
                if (s7 === peg$FAILED) {
                  s6 = undefined;
                } else {
